--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tienda",
+  "name": "Tienda",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,13 +18,21 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@auth0/angular-jwt": "^5.2.0",
+    "@fortawesome/angular-fontawesome": "^0.14.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
-    "tslib": "^2.6.2",
+    "sweetalert2": "^11.6.13",
+    "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.2.3",
-    "@angular/cli": "^17.3.0",
+    "@angular-devkit/build-angular": "^17.0.10",
+    "@angular/cli": "^17.2.2",
     "@angular/compiler-cli": "^17.2.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
