--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/ngx-photo-editor/photo-editor.css",
               "src/styles.css"
             ],
             "scripts": [
@@ -43,6 +44,7 @@
               "node_modules/@popperjs/core/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
+            
           },
           "configurations": {
             "production": {
