--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "cropperjs": "^1.6.1",
     "jquery": "^3.7.1",
+    "ngx-photo-editor": "^0.4.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
@@ -41,6 +43,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.3.2"
+    "typescript": "^5.2.2"
   }
 }
