--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@popperjs/core": "^2.11.8",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
+    "angular2-qrcode": "^2.0.3",
     "bootstrap": "^5.3.2",
     "cropperjs": "^1.6.1",
     "jquery": "^3.7.1",
     "ngx-photo-editor": "^0.4.4",
+    "ngx-qrcode2": "^9.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
